--- a/conf/locale/ru_RU/LC_MESSAGES/django.po
+++ b/conf/locale/ru_RU/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-03 13:57+0700\n"
+"POT-Creation-Date: 2014-05-03 14:24+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,11 +37,11 @@ msgstr "Материалы"
 msgid "Gems"
 msgstr "Камни"
 
-#: product/models.py:16 product/models.py:29
+#: product/models.py:16
 msgid "Product"
 msgstr "Товар"
 
-#: product/models.py:17 product/models.py:30
+#: product/models.py:17
 msgid "Products"
 msgstr "Товары"
 
@@ -57,10 +57,34 @@ msgstr "Количество"
 msgid "Shop"
 msgstr "Магазин"
 
-#: shop/models.py:9
+#: product/models.py:29
+msgid "Store product"
+msgstr "Товар в магазине"
+
+#: product/models.py:30
+msgid "Store products"
+msgstr "Товары в магазине"
+
+#: shop/models.py:9 shop/models.py:25
 msgid "Admin"
 msgstr "Администратор"
 
 #: shop/models.py:13
 msgid "Shops"
 msgstr "Магазины"
+
+#: shop/models.py:19 shop/models.py:29
+msgid "Email"
+msgstr "Почта"
+
+#: shop/models.py:26
+msgid "Admins"
+msgstr "Администраторы"
+
+#: shop/models.py:36
+msgid "Manager"
+msgstr "Менеджер"
+
+#: shop/models.py:37
+msgid "Managers"
+msgstr "Менеджеры"
